# wazumation

./: .gitignore  COMMANDS.md  MANIFEST.in  README.md  fix_wazuh_now.sh  install.sh  pyproject.toml  requirements.txt  test_ossec.conf  test_plan.json  test_plan2.json
data/: wazuh_section_schemas.json
docs/assets/: cli-diff-feature.txt  cli-list.txt  gui-snapshot.txt  self-test-pass.txt
examples/: localfile_desired.json  syscheck_desired.json
tests/: __init__.py  test_all_plugins_e2e.py  test_audit.py  test_audit_immutability.py  test_backup.py  test_change_plan.py  test_cli.py  test_diff.py  test_feature_detection.py  test_feature_mode.py  test_gui_lazy_import.py  test_missing_sections_file.py  test_self_test.py  test_xml_healer.py  test_xml_sanitize.py
tools/: extract_wazuh_section_identifiers.py  generate_all_plugins.py  generate_docs_assets.py  render_text_svg.py  scrape_wazuh_section_schema.py  sync_wazuh_sections.py
wazumation/: __init__.py  __main__.py
wazumation/cli/: __init__.py  main.py
wazumation/core/: __init__.py  applier.py  audit.py  backup.py  change_plan.py  config_manager.py  config_paths.py  diff.py  service_manager.py  service_monitor.py  validator.py  xml_healer.py
wazumation/data/: wazuh_section_metadata.json  wazuh_sections.json
wazumation/features/: __init__.py  cli.py  detector.py  gui.py  gui_entry.py  models.py  planner.py  registry.py  self_test.py  service_manager.py  state.py
wazumation/ui/: __init__.py  audit_viewer.py  dashboard.py  main.py  main_window.py  modules.py  plan_diff.py  policy.py
(+55 files in other folders)
